# openstef

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  COMMITTERS.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_GOVERNANCE.md  README.md  RELEASE.md  REUSE.toml  SUPPORT.md  THIRD_PARTY_LICENSES.md  about_openstef.html  api_reference.html  architecture_methodology_components.html  blub.py  code_modules.html  community.html  concepts.html  dashboard.html  dazls.html  examples.html  examples.py  genindex.html  index.html  index.md  influx_database_diagram.html  input_data_with_holiday_features.csv  jupytext.toml  methodology_train_predict.html  modules.html  objects.inv  openstef.data_classes.html  openstef.feature_engineering.html  openstef.html  openstef.metrics.html  openstef.model.html  openstef.model.metamodels.html  (+54 more)
docs/: .gitkeep  Makefile  README.md  about_openstef.rst  api_reference.rst  architecture.rst  architecture_methodology_components.rst  autosummary_cache.py  autosummary_helpers.py  buildsite.sh  code_modules.rst  community.rst  concepts.rst  conf.py  dashboard.rst  dazls.rst  doc-requirements.txt  index.rst  influx_database_diagram.rst  intro.rst  make.bat  methodology_train_predict.rst  obsolete_requirements.txt  pipelines_user_guide.rst  pyproject.toml  quickstart.rst  readme.md  requirements.txt  sql_database_diagram.rst  sync_sources.py  tutorials.rst  user_guides.rst
docs/_static/: crane.png.license  infinity.png.license  knowledge_grid.png.license  methodology_train_predict.pptx  methodology_train_predict.svg.license  power-source.png.license  probability.png.license
docs/design/: tuning-refactor.md
docs/issues/: STEF-2037_holiday_feature_bug_fix.md
docs/ktpbase/: database.py  log.py
docs/ktpbase/config/: config.py
docs/pipeline_user_guides/: create_base_case_forecast_pipeline.rst  create_components_forecast_pipeline.rst  create_forecast_pipeline.rst  optimize_hyperparameters_pipeline.rst  train_model_and_forecast_backtest.rst  train_model_pipeline.rst
docs/rfcs/: 0001-multi-quantile-target-forecast-input.md
docs/source/: changelog.rst  community.rst  conf.py  contributing.rst  examples.rst  faq.rst  getting_started.rst  index.rst  tutorials  user_guide.rst
docs/source/_figures/: generate_concept_figures.py  generate_guide_figures.py
docs/source/_static/: versions.json
docs/source/_templates/: custom_class.rst  custom_class_noindex.rst  custom_function.rst  custom_module.rst  module_overview.rst  package_overview.rst
docs/source/api/: beam.rst  index.rst  meta.rst  models.rst
docs/source/architecture/: beam.rst  core.rst  index.rst  meta.rst  models.rst
docs/source/concepts/: component_splitting.rst  feature_engineering.rst  forecasting_basics.rst  index.rst  meta_ensembles.rst  quantiles_and_confidence.rst  reliability_and_fallback.rst
docs/source/contribute/: _getting_help.rst  code_style_guide.rst  contributing_guide.rst  development_setup.rst  document.rst  index.rst
docs/source/diagrams/architecture/: beam_diagram_1.mmd  core_diagram_1.mmd  index_diagram_1.mmd  (+2 more)
docs/source/getting_started/: advanced_customization.rst  backtesting.rst  first_forecast.rst  index.rst  installation.rst  quickstart.rst
docs/source/images/: uncertainty_estimation.svg.license
docs/source/logos/: logo_openstef_small.png.license
docs/source/project/: citing.rst  committee.rst  index.rst  license.rst  maintainers.rst
docs/source/rfcs/: 0000-rfc-template.md
docs/source/user_guide/: data_integration.rst  deployment.rst  external_resources.rst  index.rst  installation.rst  logging.rst  median_forecaster.rst  migration_v3_v4.rst  quick_start.rst  tutorials.rst  use_cases.rst
examples/: README.md  model_contributions.ipynb  model_contributions_plot.py  pyproject.toml
examples/benchmarks/: README.md  liander2024_optimization_example.py  liander_2024_benchmark.py  liander_2024_benchmark_rfgbm.py  liander_2024_benchmark_xgboost_gblinear.py  liander_2024_compare_results.py  liander_2024_ensemble.py  liander_2024_residual.py
examples/benchmarks/custom/: README.md  compare_benchmark_runs.ipynb  compare_benchmark_runs.py  custom_benchmark.ipynb  custom_benchmark.py  custom_forecaster.ipynb  custom_forecaster.py  evaluate_existing_forecasts.ipynb  evaluate_existing_forecasts.ipynb.license  evaluate_existing_forecasts.py  run_custom_benchmark.ipynb  run_custom_benchmark.py  run_liander2024_benchmark.ipynb  run_liander2024_benchmark.py
examples/benchmarks/custom_benchmark/: README.md  __init__.py  compare_custom_results.py  compare_liander2024_results.py  evaluate_existing_forecasts.py  evaluate_forecasts.py  example_baseline.py  example_benchmark.py  run_benchmark.py  run_liander2024_benchmark.py
examples/benchmarks/liander2024/: __init__.py  compare_benchmark_runs.ipynb  compare_benchmark_runs.py  run_ensemble_benchmark.ipynb  run_ensemble_benchmark.py  run_xgboost_gblinear_benchmark.ipynb  run_xgboost_gblinear_benchmark.py
examples/deployment/: .gitignore  README.md  pyproject.toml
examples/deployment/tests/: test_deployment.py
examples/examples/: .gitignore  EXAMPLE_IDEAS.md  configuring_model_pipeline_example.py  configuring_model_pipeline_example_simple.py  configuring_model_pipeline_example_versioned.py  creating_weather_forecast_dataset_from_openmeteo.py  forecasting_preset_example.py  isotonic_calibration_example.py  median_forecaster_example.py
examples/tutorials/: .gitignore  _data.py  backtesting_openstef_with_beam.ipynb  backtesting_quickstart.ipynb  backtesting_quickstart.py  custom_pipeline.ipynb  custom_pipeline.py  data.py  datasets.py  ensemble_forecasting.ipynb  ensemble_forecasting.py  feature_engineering.ipynb  feature_engineering.py  forecasting_quickstart.ipynb  forecasting_quickstart.py  forecasting_with_workflow_presets.ipynb  forecasting_with_workflow_presets.py  hyperparameter_tuning_with_optuna.ipynb  hyperparameter_tuning_with_optuna.py  model_explainability.ipynb  model_explainability.py  pyproject.toml  quantile_calibration.ipynb  quantile_calibration.py  try_optuna.ipynb
(+1484 files in other folders)
