# SPDX-FileCopyrightText: 2025 Contributors to the OpenSTEF project <openstef@lfenergy.org>
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "openstef"
version = "0.0.0"
description = "Open Short Term Energy forecasting library"
readme = "README.md"
keywords = [ "energy", "forecasting", "machinelearning" ]
license = "MPL-2.0"
authors = [
  { name = "Alliander N.V", email = "openstef@lfenergy.org" },
]
requires-python = ">=3.12,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "openstef-core",
  "openstef-models[xgb-cpu]",
]

optional-dependencies.all = [
  "openstef-beam[all]",
  "openstef-core",
  "openstef-meta",
  "openstef-models[xgb-cpu]",
]
optional-dependencies.beam = [
  "huggingface-hub>=0.35.3",
  "openstef-beam",
]
optional-dependencies.meta = [
  "openstef-meta",
]
optional-dependencies.models = [
  "openstef-models[xgb-cpu]",
]
urls.Documentation = "https://openstef.github.io/openstef/index.html"
urls.Homepage = "https://lfenergy.org/projects/openstef/"
urls.Issues = "https://github.com/OpenSTEF/openstef/issues"
urls.Repository = "https://github.com/OpenSTEF/openstef"

[dependency-groups]
dev = [
  "jupytext>=1.19.1",
  "licensecheck>=2025.1",
  "microsoft-python-type-stubs",
  "moto[s3,server]>=5.1.11",
  "openstef-beam",
  "openstef-core",
  "openstef-docs",
  "openstef-meta",
  "openstef-models",
  "pandas-stubs>=2.3.0.250703,<3", # Held at <3 to match the pandas <3 pin (see migration issue)
  "poethepoet>=0.36",
  # Capped <2.12: 2.12+ reformats every pyproject.toml in a new style (churn),
  # and with toml-fmt-common 1.3.x it crashes on a duplicate argparse
  # --table-format. Bump deliberately in its own PR.
  "pyproject-fmt>=2.6,<2.12",
  "pyright>=1.1.404",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-xdist>=3.8",
  "reuse>=5.0.2",
  "ruff>=0.12.8",
  "scipy-stubs>=1.16.2.4",
  "ty>=0.0.48",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
openstef-beam = { workspace = true }
openstef-models = { workspace = true }
openstef-docs = { workspace = true }
openstef-core = { workspace = true }
openstef-meta = { workspace = true }
microsoft-python-type-stubs = { git = "git+https://github.com/microsoft/python-type-stubs.git" }

[tool.uv.workspace]
members = [
  "docs",
  "examples",
  "examples/deployment",
  "packages/openstef-beam",
  "packages/openstef-core",
  "packages/openstef-meta",
  "packages/openstef-models",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = [
  "examples",
  "packages/*/src",
]

include = [
  "examples/**/*.py",
  "packages/**/*.py",
]
output-format = "concise"
format.preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # Conflicting rules (a), ruff itself suggest disabling them
  "CPY001", # Reuse covers copyright checks
  "D203",   # Conflicting rules (a), ruff itself suggest disabling them
  "D213",   # Conflicting rules (a), ruff itself suggest disabling them
  "EM101",  # do not enforce message in variable when raising an exception
  "FIX002", # TODO's are allowed when they are linked ot an issue (TD003 handles that part)
  "PGH003", # Allow generic type ignores, since sometimes there are multiple unresolvable issues
  "TC006",  # Let's not force quoting the first param of typing.cast
  "TRY003", # simplify exception messages
]
lint.per-file-ignores."./examples/benchmarks/custom/*" = [
  "E402",   # Imports not at top — notebook cells have natural ordering
  "E501",   # Long lines in markdown cells (API doc URLs)
  "ERA001", # Jupytext YAML frontmatter looks like commented-out code
  "T201",   # Benchmarks may use print for demonstration
]
lint.per-file-ignores."./examples/benchmarks/liander2024/*" = [
  "D100",   # Module docstring is in a remove-cell for clean notebook rendering
  "E402",   # Imports not at top — os.environ must be set before imports
  "E501",   # Long lines in markdown cells (API doc URLs)
  "ERA001", # Jupytext YAML frontmatter looks like commented-out code
  "T201",   # Benchmarks may use print for demonstration
]
lint.per-file-ignores."./examples/deployment/**/*.py" = [
  "AIR311", # The example targets the installed Airflow 2.x TaskFlow API (airflow.decorators)
  "D103",   # Orchestrator ops / tasks / inline helpers are self-describing in examples
  "D104",   # Deployment package __init__ files are import markers, not documented surfaces
  "DOC201", # Examples favour prose docstrings over explicit Returns sections
  "TC001",  # Keep imports inline (not under TYPE_CHECKING) for copy-paste readability
  "TC002",
  "TC003",
]
lint.per-file-ignores."./examples/deployment/tests/*.py" = [
  "S101", # Tests use assert
]
lint.per-file-ignores."./examples/tutorials/*" = [
  "D100",    # Notebooks don't need module docstrings
  "D103",    # Inline helpers in notebooks don't need docstrings
  "E402",    # Imports not at top — notebook cells have natural ordering
  "E501",    # Long lines in notebooks — readability is cell-scoped
  "ERA001",  # Jupytext YAML frontmatter looks like commented-out code
  "F821",    # Cell-scoped names appear undefined to Ruff's module-level analysis
  "INP001",  # Not a namespace package — notebooks don't need __init__.py
  "PLR2004", # Magic values in assertions are fine for notebook checks
  "PT018",   # Assertion style doesn't matter in notebooks
  "PTH",     # Tutorials may use os.path for simplicity
  "S101",    # Tutorials may use assert for runtime checks
  "SLF001",  # Private member access needed to demonstrate internals
  "T201",    # Tutorials may use print for demonstration
]
lint.per-file-ignores."./packages/*/src/*/__init__.py" = [
  "RUF067", # Package __init__ modules set up a NullHandler logger, not only re-exports
]
lint.per-file-ignores."./packages/*/tests/*" = [
  "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
  "D",       # All docstring rules
  "DOC",     # All docstring rules
  "E501",    # Line too long (test names can be descriptive)
  "FBT",     # Allow booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "PLR0913", # Pytests can have a lot of fixtures, ignore too many arguments
  "PLR0917", # Pytests can have a lot of fixtures, ignore too many arguments
  "PLR2004", # Magic value used in comparison
  "RUF069",  # Tests assert exact, deterministic float outputs (e.g. a rolling mean of known inputs)
  "S101",    # asserts allowed in tests...
  "S311",    # Standard pseudo-random generators
  "SLF001",  # Allow private access in tests
]
lint.per-file-ignores."./tools/*" = [
  "T201", # tools are cli scripts and are allowed to use print
]
lint.per-file-ignores."./{docs,examples}/*" = [
  "INP001", # example folders are not packages, so __init__.py is not needed
  "T201",   # examples are allowed to use print
]
lint.fixable = [ "ALL" ]
lint.flake8-annotations.allow-star-arg-any = true # *args and **kwargs are allowed to be Any
lint.flake8-annotations.suppress-dummy-args = true # do not type _ arguments/variables
lint.flake8-annotations.suppress-none-returning = true # do not require annotation if None is returned/there is no return
lint.flake8-bugbear.extend-immutable-calls = [
  "openstef_core.types.Q",
] # Q is immutable, so adding it here to avoid false positives
lint.isort.known-first-party = [
  "src",
  "tests",
  "examples",
] # Useful if ruff does not run from the actual root of the project and to import form tests
lint.pep8-naming.ignore-names = [ "X" ] # Allow X for SKLearn-like feature matrices
lint.pydocstyle.convention = "google"
lint.pylint.allow-dunder-method-names = [
  "__get_pydantic_core_schema__",
  "__pydantic_init_subclass__",
] # valid pydantic name
lint.pylint.max-args = 7 # the default of 5 is a bit limiting. 7 should be enough for nearly all cases
lint.preview = true

[tool.pyproject-fmt]
column_width = 120
indent = 2
max_supported_python = "3.13"

[tool.pytest.ini_options]
testpaths = [ "packages/*/tests", "examples/deployment/tests", "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
addopts = [
  "--import-mode=importlib", # modern way to import tests
  "--strict-markers",        # Force defining marks here (in a markers setting) to prevent typos
]
markers = [
  "integration: marks integration tests",
  "slow: marks slow-running tests",
]
filterwarnings = [
  # Ignore fork() deprecation warning from multiprocessing on macOS
  # This warning occurs when pytest (multi-threaded) spawns processes using fork()
  # Using spawn instead breaks test infrastructure (fixtures not picklable)
  "ignore:This process.*is multi-threaded.*use of fork.*may lead to deadlocks:DeprecationWarning",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.coverage.report]
fail_under = 20
show_missing = true
skip_covered = true
sort = "-Miss"
omit = [ "tests/*", "packages/*/tests" ]

[tool.coverage.run]
source = [
  "packages/openstef-beam/src",
  "packages/openstef-core/src",
  "packages/openstef-meta/src",
  "packages/openstef-models/src",
]
omit = [
  "tests/*",
  "examples/*",
  "packages/*/src/tests/*",
  "packages/*/src/examples/*",
]

[tool.ty.src]
include = [
  "tools/**/*.py",
  "examples/**/*.py",
  "packages/*/src/**/*.py",
  "packages/*/examples/**/*.py",
  "packages/*/tests/**/*.py",
]
exclude = [
  "examples/tutorials/**/*.py",
  "**/.venv/**",                    # never type-check files inside a virtualenv (e.g. a member's local .venv)
  "**/openstef_deployment_runs/**", # deployment example run artifacts
]

[tool.poe]
# Run-the-example tasks (deploy-*) are defined in the deployment example's pyproject,
# co-located with the example; included here so `uv run poe deploy-*` works from the root.
include = [ "examples/deployment/pyproject.toml" ]

[tool.poe.tasks.lint]
help = "Lint code (with ruff)"
cmd = 'ruff check --fix --show-fixes ${check:+ --no-fix} ${unsafe:+ --unsafe-fixes}'
args = [
  { name = "check", type = "boolean", help = "Does not correct files, only warns" },
  { name = "unsafe", type = "boolean", help = "Enables unsafe fixes, which may change the code in a way that is not reversible. Use with care." },
]

[tool.poe.tasks.format]
help = "Format code (with ruff)"
cmd = 'ruff format ${check:+ --diff}'
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns" } ]

[tool.poe.tasks.format-pyproject]
help = "Format pyproject.toml (with pyproject-fmt)"
cmd = 'pyproject-fmt ${check:+ --check} -n pyproject.toml packages/*/pyproject.toml'
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns" } ]

[tool.poe.tasks.lock]
help = "Asserts that dependencies are locked"
cmd = "uv lock --check"

[tool.poe.tasks.type]
help = "Check typing (with ty)"
cmd = "ty check tools examples packages/*/src"

[tool.poe.tasks.type-tests]
help = "Check typing (with ty)"
cmd = "ty check packages/*/tests"

[tool.poe.tasks.tests]
help = "Run pytest with xdist, marker filtering, and coverage"
cmd = "pytest --numprocesses=auto ${markers:+ -m $markers} --cov --cov-report=term-missing --cov-report=xml:coverage.xml"
args = [
  { name = "markers", type = "string", default = "", help = "Only run tests matching the given pytest markers expression" },
]

[tool.poe.tasks.doctests]
help = "Run all docstring examples via pytest’s doctest plugin"
cmd = "pytest --numprocesses=auto --doctest-modules packages/*/src --maxfail=1"

[tool.poe.tasks.notebooks]
help = "Sync jupytext .py percent sources → .ipynb notebooks (and vice versa)"
sequence = [
  { cmd = "jupytext --sync examples/tutorials/*.py" },
  { cmd = "jupytext --sync examples/benchmarks/custom/*.py examples/benchmarks/liander2024/*.py" },
]

[tool.poe.tasks.notebooks-clear]
help = "Strip outputs from all .ipynb notebooks"
sequence = [
  { cmd = "jupyter nbconvert --clear-output --inplace examples/tutorials/*.ipynb" },
  { cmd = "jupyter nbconvert --clear-output --inplace examples/benchmarks/custom/*.ipynb examples/benchmarks/liander2024/*.ipynb" },
]

[tool.poe.tasks.notebooks-check]
help = "Check that .ipynb notebooks are in sync with their jupytext .py sources and have no outputs"
sequence = [
  { cmd = "jupytext --sync examples/tutorials/*.py" },
  { cmd = "jupytext --sync examples/benchmarks/custom/*.py examples/benchmarks/liander2024/*.py" },
  { cmd = "git diff --exit-code -- examples/tutorials/ examples/benchmarks/" },
  { script = "tools.check_notebook_outputs:main" },
]

[tool.poe.tasks.report]
help = "Generate coverage report. Will use data from a previous cover command."
sequence = [
  { cmd = "coverage report", help = "Generate a coverage report" },
  { cmd = "coverage xml -o coverage.xml", help = "Generate XML coverage report for CI integration" },
]

[tool.poe.tasks.reuse]
help = "Check REUSE compliance (with optional fix)"
args = [ { name = "fix", type = "boolean", help = "Automatically fix REUSE compliance issues before lint check" } ]
control.expr = "fix"
switch = [
  { case = "True", cmd = "uv run tools/reuse-fix.py --license \"MPL-2.0\" --copyright \"Contributors to the OpenSTEF project <openstef@lfenergy.org>\"" },
  { cmd = "reuse lint" },
]

[tool.poe.tasks.licensecheck]
help = "Check licenses of dependencies for compatibility"
cmd = 'licensecheck ${check:+ --show-only-failing --zero}'
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns" } ]

[tool.poe.tasks.licensecheck-third-party]
help = "Check licenses of dependencies for compatibility"
cmd = 'licensecheck --format markdown --file THIRD_PARTY_LICENSES.md'

[tool.poe.tasks.all]
help = "Run all CI calls"
control.expr = "check"                                                                       # There is no pass through option (yet?) so use a control expression to pass --check option to tasks when relevant
args = [ { name = "check", type = "boolean", help = "Does not correct files, only warns" } ]
# NB: ruff needs the linter (which will sort imports) to run before the formatter (which cannot sort imports).
switch = [
  { case = "check", sequence = [
    "reuse",
    "licensecheck --check",
    "lint --check",
    "format --check",
    "format-pyproject --check",
    "lock",
    "type",
    "tests",
    "doctests",
    "notebooks-check",
  ], ignore_fail = "return_non_zero" },
  { sequence = [
    "licensecheck --check",
    "reuse --fix",
    "lint",
    "format",
    "format-pyproject",
    "lock",
    "type",
    "tests",
    "doctests",
    "notebooks",
  ], ignore_fail = "return_non_zero" },
]

[tool.poe.tasks.version]
help = "Set the release version in pyproject.toml and packages' pyproject.toml files"
sequence = [
  # Bumps the version in all pyproject.toml files
  { cmd = "uv version ${version} --frozen" },
  { cmd = "uv version --package openstef-beam ${version} --frozen" },
  { cmd = "uv version --package openstef-models ${version} --frozen" },
  { cmd = "uv version --package openstef-core ${version} --frozen" },
  { cmd = "uv version --package openstef-meta ${version} --frozen" },
  # Pin these versions in the root pyproject.toml
  { cmd = "uv add openstef-beam==${version} --optional beam" },
  { cmd = "uv add openstef-meta==${version} --optional meta" },
  { cmd = "uv add openstef-models==${version} --optional models" },
  { cmd = "uv add openstef-core==${version} --optional core" },
  { cmd = "uv add openstef-meta==${version} --optional models" },
  { cmd = "uv add openstef-meta==${version} openstef-models==${version} openstef-beam==${version} openstef-core==${version} --optional all" },
  { cmd = "uv add openstef-models==${version} openstef-core==${version}" },
]
args = [
  { name = "version", type = "string", help = "The version to set, e.g. 4.0.0" },
]

[tool.poe.tasks.build]
help = "Build all packages"
sequence = [
  { cmd = "uv build --all-packages" },
  { cmd = "uv build .", help = "Build root meta package separately (not part of --all-packages)" },
]

[tool.poe.tasks._docs_sync]
help = "Sync tutorial and benchmark sources into docs/source for Sphinx (also runs automatically via conf.py)"
cmd = "python docs/sync_sources.py"

[tool.poe.tasks.docs]
help = "Build the documentation"
control.expr = "serve"
switch = [
  { case = "True", cmd = "sphinx-autobuild docs/source docs/build/html --watch packages --watch examples" },
  { cmd = "sphinx-build -b html docs/source docs/build/html" },
]
args = [
  { name = "serve", type = "boolean", default = false, help = "Serve the documentation with live reload" },
]

[tool.poe.tasks.docs-clean]
help = "Clean the documentation build artifacts"
cmd = "rm -rf docs/build/html/* docs/source/api/generated"

[tool.licensecheck]
# Pycountry is LGPL-2.1 according to pypi.
# MPL 2.0 lists explicitly that it is compatible with LGPL-2.1 and later, so we ignore it here (due to false positive).
ignore_packages = [ "openstef-beam", "openstef-core", "openstef-meta", "openstef-models", "pycountry" ]
# Note: MPL 2.0 lists explicitly Apache License 2.0 as compatible, so we ignore it here (due to false positive).
ignore_licenses = [ "apache software license", "apache license 2.0" ]
extras = [ "all" ]
